--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ body {
 }
 
 .masthead.segment {
-	min-height: 700px;
+	min-height: 100vh;
 	padding: 1em 0 !important;
 }
 
@@ -47,7 +47,7 @@ body {
 }
 
 .masthead h1.ui.header {
-	margin-top: 3em;
+	margin-top: 4em;
 	margin-bottom: 0;
 	font-size: 4em;
 	font-weight: normal;
